--- a/EventMaker/EventMaker.csproj
+++ b/EventMaker/EventMaker.csproj
@@ -120,8 +120,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\background1.jpg" />
+    <Content Include="Assets\background_02.jpg" />
     <Content Include="Assets\calander.jpg" />
     <Content Include="Assets\calander1.jpg" />
+    <Content Include="Assets\og.png" />
+    <Content Include="Assets\pexels-photo-531880.jpg" />
+    <Content Include="Assets\static1.squarespace.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
